# Hedge_Algorithm

./: .gitignore  README.md  pyproject.toml
backtester/: cli.py  guards.py  settlement.py
backtester/costs/: __init__.py  model.py
backtester/data/: cache.py  clob.py  gamma.py
backtester/engine/: __init__.py  backtest.py  metrics.py
backtester/signal/: __init__.py  rules.py
tests/: test_cache.py  test_cli.py  test_clob.py  test_costs.py  test_engine_synthetic.py  test_gamma.py  test_guards.py  test_metrics.py  test_settlement.py  test_signal.py
